Done all crud apis with swagger
